<resources>
    <!-- strings nom application / activités -->
    <string name="app_name">OutGuess</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_home">Accueil</string>

    <!-- strings activité accueil -->
    <string name="button_play">Jouer</string>
    <string name="button_media">Voter</string>
    <string name="button_availablesoon">Prochainement</string>

    <!-- strings choix du mode de jeu -->
    <string name="gametype">Choix du mode de jeu</string>
    <string name="button_solo">Mode marathon</string>
    <string name="button_multi">Mode versus</string>

    <!-- strings mode marathon -->
    <string name="current_score">Score actuel :\u0020</string>

    <!-- strings réponse question -->
    <string name="button_validate">J\'ai deviné</string>

    <!-- strings activité récap score -->
    <string name="null_score">0</string>
    <string name="null_question">Oeuvre</string>
    <string name="first_question">Manche 1</string>
    <string name="second_question">Manche 2</string>
    <string name="third_question">Manche 3</string>
    <string name="fourth_question">Manche 4</string>
    <string name="fifth_question">Manche 5</string>

    <!-- strings choix du mode de jeu et du theme new -->
    <string name="buttonSolo">Mode marathon</string>
    <string name="buttonVSFriend">Défi contre un ami</string>
    <string name="buttonVSRandom">Défi aléatoire</string>

    <string name="films">Films</string>
    <string name="series">Séries</string>
    <string name="livres">Livres</string>
    <string name="videogames">Jeux vidéos</string>

    <string name="media">Choix du media</string>
    <string name="scifi">Science-fiction</string>
    <string name="fantastique">fantastique</string>
    <string name="action">Action</string>

    <string name="buttonPlay">C\'est parti !</string>

</resources>
