<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/gametype"
        android:id="@+id/title_home"

        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button_solo"
        android:id="@+id/button_solo"

        android:background="@drawable/buttonflat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button_availablesoon"
        android:id="@+id/button_multi"

        android:background="@drawable/buttonflat"
        android:layout_marginTop="25dp"
        android:enabled="false" />

    </LinearLayout>

</RelativeLayout>